--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-jose = "^3.3.0"
 uvicorn = "^0.23.2"
 sqlalchemy-utils = "^0.41.1"
 social-auth-core = "^4.4.2"
+black = "^23.10.0"
 
 
 [build-system]
